--- a/quinesomos.html
+++ b/quinesomos.html
@@ -6,9 +6,9 @@
 <body>
     <HEader> 
         <h3>
-          <a href="/inicio.html">Inicio</a>        
-          <a href="/quinesomos.html">Quienes Somos</a>       
-          <a href="/contacto.html">Contactos</a>    
+          <a href="inicio.html">Inicio</a>        
+          <a href="quinesomos.html">Quienes Somos</a>       
+          <a href="contacto.html">Contactos</a>    
         </h3>
       </HEader>
       <p>
