a bendición de dios

--- a/contacto.html
+++ b/contacto.html
@@ -3,18 +3,27 @@
 <head>
     
     <title>Contacto</title>
+    <link rel="stylesheet" href="CSs/unit.css">
 </head>
-<body>
-    <HEader> 
-        <h3>
-            <a href="inicio.html">Inicio</a>        
-            <a href="quinesomos.html">Quienes Somos</a>       
-            <a href="contacto.html">Contactos</a>    
-        </h3>    
-    </HEader>
-
-        <p>
-            Deberíamos crecer como un árbol que tampoco 
+<body id="fondocontacto">
+    <header> 
+        <nav>
+            <ul>
+                <li id="ini">
+                    <a href="inicio.html">Inicio</a>  
+                </li>
+                <li id="quien">
+                    <a href="quinesomos.html">Quienes Somos</a>   
+                </li>
+                <li id="con">
+                    <a href="contacto.html">Contactos</a>    
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div id="fra1">
+        <p id="fra11"><br><br><br>
+            Deberíamos crecer como un árbol que tampoco<img id="imm2" src="imagenes/osc.png" width="200px" > 
             sabe de su ley. Sin embargo, nos atamos a 
             intenciones, sin tener en cuenta el hecho
             de que la intención es limitación, e incluso
@@ -24,19 +33,22 @@
             querer saber por anticipado de dónde nos vendrá la 
             luz?
         </p>      
-
-        <p>
+        <p id="fra12">
             --Carl Gustav Jung--
         </p>
-        <p>
+    </div>
+    <img id="imm1" src="imagenes/nid.jpg" width="200px">
+<div id="fra2">
+        <p id="fra21">
             Siempre había escogido al azar las novias de 
             una noche más por el precio que por los encantos, 
             y hacíamos amores sin amor, medio vestidos las 
             más de las veces y siempre en la oscuridad para 
             imaginarnos mejores.
         </p>
-        <p>
+        <p id="fra22">
             -- Gabriel García Márquez--
         </p>
+</div>
 </body>
 </html>
