--- a/inicio.html
+++ b/inicio.html
@@ -2,28 +2,37 @@
 <html >
 <head>
     <title>EXAMEN</title>
+    <link rel="stylesheet" href="CSs/unit.css">
 </head>
-<body>
-    <HEader> 
-        <h3>
-            <a href="inicio.html">Inicio</a>        
-            <a href="quinesomos.html">Quienes Somos</a>       
-            <a href="contacto.html">Contactos</a>    
-          </h3>
-    </HEader>
-
-    <p>En el momento en que
-        entiendo verdaderamente
+<body id="fondoinicio">
+    <header> 
+        <nav>
+            <ul>
+                <li id="ini">
+                    <a href="inicio.html">Inicio</a>  
+                </li>
+                <li id="quien">
+                    <a href="quinesomos.html">Quienes Somos</a>   
+                </li>
+                <li id="con">
+                    <a href="contacto.html">Contactos</a>    
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <p id="tex"><br><br><br> En el momento en que
+        <span id="t1">entiendo verdaderamente</span>
         a mi
-        enemigo,
+        <span id="t2"> enemigo</span>,
         en el momento en que le
-        entiendo 
+        <span id="t3">entiendo</span>
         lo suficientemente bien como para
-        derrotarle
+        <span id="t4"> derrotarle</span>
         , entonces, en ese preciso instante 
-        tambien le 
-        quiero
+        <span id="t5"> tambien le </span>
+        <span id="t6"> quiero</span>
     </p>
+    
     
 </body>
 </html>
