--- a/quinesomos.html
+++ b/quinesomos.html
@@ -2,17 +2,46 @@
 <html>
 <head>
     <title>Quienes somos </title>
+    <link rel="stylesheet" href="CSs/unit.css">
 </head>
-<body>
-    <HEader> 
-        <h3>
-          <a href="inicio.html">Inicio</a>        
-          <a href="quinesomos.html">Quienes Somos</a>       
-          <a href="contacto.html">Contactos</a>    
-        </h3>
-      </HEader>
-      <p>
-
-      </p>
+<body id="fondosomos">
+  <header> 
+    <nav>
+        <ul>
+            <li id="ini">
+                <a href="inicio.html">Inicio</a>  
+            </li>
+            <li id="quien">
+                <a href="quinesomos.html">Quienes Somos</a>   
+            </li>
+            <li id="con">
+                <a href="contacto.html">Contactos</a>    
+            </li>
+        </ul>
+    </nav>
+</header>
+     <br><br><br>
+     <table>
+      <tr id="titab">
+        <td> <b>E</b>dad</td>
+        <td> <b>P</b>eso</td>
+      </tr>
+      <tr>
+        <td>40</td>
+        <td>78</td>
+      </tr>
+      <tr>
+        <td>53</td>
+        <td>76</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          En el momento en que entiendo verdaderamente
+          a mi enemigo, en el momento en que le entiendo
+          lo suficientemente bien como para derrotarle, entonces,
+          en ese preciso instante, también le quiero
+        </td>
+      </tr>
+    </table>
 </body>
 </html>
